Что-то поменялось. Наверное, в лучшую сторону

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,38 +77,6 @@ margin: 0 auto;
 	padding: 100px 10px;
 	text-align:center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.begin{
+	padding-left: 24px;
+}
