--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,3 +80,12 @@ margin: 0 auto;
 .begin{
 	padding-left: 24px;
 }
+input:invalid+span:after {
+    content: '✖';
+    padding-left: 5px;
+}
+
+input:valid+span:after {
+    content: '✓';
+    padding-left: 5px;
+}
